# AAC_Software

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  aac_card_generator.py  aac_dataset_generator.py  aac_image_filter.py  aac_interpreter_service.py  aac_select.py  acc_clustering.py  app.py  data_prepare.py  download_arasaac.py  download_arasaac.sh  eslint-precommit.config.js  korean_arasaac_downloader.sh  mk_combination.py  requirements.txt  schema.py  server.py  test_aac_service.py
backend/: .env.example  README.md  __init__.py  aac_interpreter_service.py  app.py  pyproject.toml  requirements.txt  service_config.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/config/: __init__.py  filter_config.py  settings.py
backend/app/core/: __init__.py  exceptions.py  logging.py  middleware.py  rate_limit.py  resilience.py  response.py  security.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/schemas/: __init__.py  auth.py  card.py  common.py  context.py  feedback.py
backend/private/: __init__.py  card_interpreter.py  card_recommender.py  cluster_similarity_calculator.py  conversation_memory.py
backend/private/llm/: __init__.py  llm_factory.py
backend/public/: __init__.py  context_manager.py  feedback_manager.py  user_manager.py
backend/scripts/: migrate_visual_signatures.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_auth.py  test_api_cards.py  test_api_context.py  test_api_health.py
config/: dataset_config.py  (+2 more)
(+252 files in other folders)
