[tool.poetry]
name = "aac-interpreter-backend"
version = "2.0.0"
description = "AAC 카드 해석 시스템 - FastAPI 백엔드"
authors = ["APPLES"]
license = "CC-BY-NC-SA-4.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.1"
openai = "^1.59.0"
transformers = "^4.40.0"
torch = "^2.5.0"
numpy = "^2.2.0"
faiss-cpu = "^1.9.0"
pillow = "^11.1.0"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.0"
ruff = "^0.9.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
